--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
           <div class="text-center">
             <div class="inline-block">
               <a
-                href="/pages/login.html"
+                href="/src/pages/login.html"
                 class="flex justify-center items-center bg-black bg-opacity-70 py-6 px-8 rounded-lg font-semibold tm-text-2xl tm-text-gold hover:text-gray-200 transition"
               >
                 <i class="fas fa-coffee mr-3"></i>
