--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -9,6 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
     <link rel="stylesheet" href="../css/login.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
@@ -38,8 +42,8 @@
                     <input
                       type="email"
                       class="form-control"
-                      id="username"
-                      name="username"
+                      id="email"
+                      name="email"
                       placeholder="Digite seu email"
                       required
                       aria-describedby="userHelp"
@@ -87,12 +91,14 @@
                   id="cadastroModal"
                   tabindex="-1"
                   aria-labelledby="cadastroModalLabel"
-                  aria-hidden="true"
                 >
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="cadastroModalLabel">
+                        <h5
+                          class="modal-title w-100 text-center"
+                          id="cadastroModalLabel"
+                        >
                           Cadastro
                         </h5>
                         <button
@@ -104,13 +110,14 @@
                       </div>
                       <div class="modal-body">
                         <!-- Formulário de cadastro aqui -->
-                        <form>
+                        <form id="cadastro-form" novalidate>
                           <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
                             <input
                               type="text"
                               class="form-control"
                               id="name"
+                              name="name"
                               required
                             />
                           </div>
@@ -119,16 +126,20 @@
                             <input
                               type="email"
                               class="form-control"
-                              id="email"
+                              id="emailCadastro"
+                              name="email"
                               required
                             />
                           </div>
                           <div class="mb-3">
-                            <label for="senha" class="form-label">Senha</label>
+                            <label for="password" class="form-label"
+                              >Senha</label
+                            >
                             <input
                               type="password"
                               class="form-control"
-                              id="senha"
+                              id="passwordCadastro"
+                              name="password"
                               required
                             />
                           </div>
@@ -154,6 +165,9 @@
     </footer>
 
     <!-- Incluindo o JS do Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/cadastro.js"></script>
   </body>
 </html>
