--- a/src/index.html
+++ b/src/index.html
@@ -2,57 +2,92 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Antique Bakery Cafe HTML Template by Tooplate</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Lading Page</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Oswald:wght@600&display=swap"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="css/tailwind.css" />
-    <link rel="stylesheet" href="css/tooplate-antique-cafe.css" />
-    <style></style>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="/src/css/index.css" />
   </head>
   <body>
-    <!-- Intro -->
-    <div
-      id="intro"
-      class="parallax-window flex items-center justify-center"
-      style="
-        background-image: url('images/supermarket-with-blurred-effect.jpg');
-      "
-    >
-      <div
-        class="container mx-auto px-2 tm-intro-width flex flex-col items-center justify-center"
-      >
-        <div class="sm:pb-60 sm:pt-48 py-20 text-center">
-          <div class="bg-black bg-opacity-70 p-12 mb-5">
-            <h1 class="text-white text-5xl tm-logo-font mb-5">Lista ae!</h1>
-            <p class="tm-text-gold tm-text-2xl">
-              Sua lista de compras simples e fácil
-            </p>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">Lista Ae! 🛒</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Início</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/about.html">Sobre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/login.html">Login</a>
+              </li>
+            </ul>
           </div>
-          <div class="bg-black bg-opacity-70 p-10 mb-5">
-            <p class="text-white leading-8 text-sm font-light">
-              Clique no botão a baixo e otimize seu tempo na ida ao mercado!
-            </p>
-          </div>
-          <div class="text-center">
-            <div class="inline-block">
-              <a
-                href="/src/pages/login.html"
-                class="flex justify-center items-center bg-black bg-opacity-70 py-6 px-8 rounded-lg font-semibold tm-text-2xl tm-text-gold hover:text-gray-200 transition"
-              >
-                <i class="fas fa-coffee mr-3"></i>
-                <span>Let's go</span>
-              </a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="hero-section">
+        <div class="container text-center">
+          <div class="row align-items-center justify-content-center">
+            <!-- Ícone esquerdo -->
+            <div class="col-md-2 d-none d-md-block text-center">
+              <i class="bi bi-arrow-90deg-right icon"></i>
+            </div>
+
+            <!-- Texto central -->
+            <div
+              class="col-md-8 d-flex justify-content-center align-items-center"
+            >
+              <div class="text-center">
+                <h1 class="hero-title">Lista <span>Ae!</span></h1>
+                <p class="hero-subtitle">
+                  Transforme suas compras em uma experiência organizada e
+                  prática!
+                </p>
+                <p class="hero-text">
+                  📌 Crie, edite e tenha sua lista de compras de forma rápida e
+                  eficiente.<br />
+                  🛒 Menos estresse, mais economia e praticidade no seu dia a
+                  dia.
+                </p>
+                <a href="pages/login.html" class="hero-btn">Comece agora</a>
+              </div>
+            </div>
+
+            <!-- Ícone direito -->
+            <div class="col-md-2 d-none d-md-block text-center">
+              <i class="bi bi-arrow-return-left icon"></i>
             </div>
           </div>
         </div>
+      </section>
+    </main>
+    <footer class="bg-dark text-white py-3 mt-auto">
+      <div class="container text-center">
+        <p class="mb-0 small">&copy; Lista Ae! 2025</p>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
