--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -23,7 +23,7 @@
           <div class="col-md-6 d-none d-xl-flex p-0">
             <div class="banner">
               <img
-                src="../images/serious-young-couple-standing-aisle-with-alcohol-drinks.jpg"
+                src="../images/_7c58ef64-c1d1-43d1-ac6b-075dd8df1394.jpg"
                 alt="banner compras"
               />
             </div>
@@ -72,20 +72,20 @@
                   </button>
                 </form>
 
-                <div class="text-center mt-3">
+                <div class="text-center mt-5">
                   <p class="mb-0">
                     Ainda não tem uma conta?
                     <a
                       href="#"
                       data-bs-toggle="modal"
                       data-bs-target="#cadastroModal"
-                      class="text-primary"
-                      >Cadastre-se aqui</a
+                      class="btn btn-primary border border-2 rounded-pill opacity-50"
                     >
+                      Cadastre-se aqui!
+                    </a>
                   </p>
                 </div>
 
-                <!-- Modal de Cadastro -->
                 <div
                   class="modal fade"
                   id="cadastroModal"
@@ -109,7 +109,6 @@
                         ></button>
                       </div>
                       <div class="modal-body">
-                        <!-- Formulário de cadastro aqui -->
                         <form id="cadastro-form" novalidate>
                           <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
