--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Lista Ae! 🛒</a>
+          <a class="navbar-brand" href="index.html">Lista Ae! 🛒</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -36,9 +36,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="#">Início</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pages/about.html">Sobre</a>
-              </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="pages/login.html">Login</a>
               </li>
@@ -64,10 +62,10 @@
                 <h1 class="hero-title">Lista <span>Ae!</span></h1>
                 <p class="hero-subtitle">
                   Transforme suas compras em uma experiência organizada e
-                  prática!
+                  prática.
                 </p>
                 <p class="hero-text">
-                  📌 Crie, edite e tenha sua lista de compras de forma rápida e
+                  📌 Crie, salve e tenha sua lista de compras de forma rápida e
                   eficiente.<br />
                   🛒 Menos estresse, mais economia e praticidade no seu dia a
                   dia.
@@ -89,5 +87,6 @@
         <p class="mb-0 small">&copy; Lista Ae! 2025</p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
