--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lista Ae</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,12 +13,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="/src/css/app.css" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Minha Marca</a>
+          <a class="navbar-brand" href="/src/pages/app.html">Lista Ae! 🛒</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -29,45 +35,147 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Início</a>
+                <a class="nav-link active" href="/src/pages/app.html">Início</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sobre</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Serviços</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
+              <li id="out" class="nav-item">
+                <a class="nav-link" onclick="sair()" href="../index.html"
+                  >Sair</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main>
-      <section class="p-3 m-0 border-0 bd-example m-0 border-0 bd-example-row">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-2 border">Column 1</div>
-            <div class="col-8 border">
-              <div class="row">
-                <div class="col-4 border">Adicione</div>
-                <div class="col-4 border">input</div>
-                <div class="col- border">Column 2</div>
-              </div>
-              <div class="row">
-                <div class="col-12 border">Column 3</div>
-              </div>
+
+    <main class="container mt-5">
+      <section>
+        <h4 class="mb-4 text-center">Suas Listas</h4>
+        <div
+          id="cardsContainer"
+          class="row row-cols-1 row-cols-md-3 g-4 justify-content-center"
+        ></div>
+      </section>
+
+      <div class="text-center mt-5 py-5">
+        <button
+          type="button"
+          class="btn btn-primary btn-lg d-none d-md-inline-block"
+          data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop"
+        >
+          <i class="bi bi-plus-circle me-2"></i>Criar Nova Lista
+        </button>
+        <button
+          type="button"
+          class="btn btn-primary rounded-circle floating-btn"
+          data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop"
+          style="width: 60px; height: 60px"
+        >
+          <i class="bi bi-plus" style="font-size: 1.5rem"></i>
+        </button>
+      </div>
+
+      <div class="modal fade" id="listaModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">
+                Lista criada em: <span id="listaData"></span>
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+              ></button>
             </div>
-            <div class="col-2 border">Column 3</div>
+            <div class="modal-body">
+              <ul id="listaItensModal" class="list-group"></ul>
+            </div>
           </div>
         </div>
-      </section>
+      </div>
+
+      <div
+        class="modal fade"
+        id="staticBackdrop"
+        data-bs-backdrop="static"
+        data-bs-keyboard="false"
+        tabindex="-1"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Criar Nova Lista de Compras</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+              ></button>
+            </div>
+            <div class="modal-body d-flex flex-column">
+              <div
+                id="listaItens"
+                style="flex: 1; overflow-y: auto; max-height: 60vh"
+              >
+                <h6>Itens da Lista:</h6>
+                <ul class="list-group"></ul>
+              </div>
+
+              <div class="mt-4 pt-3 border-top">
+                <div class="row g-3">
+                  <div class="col-md-6">
+                    <input
+                      type="text"
+                      id="produtoInput"
+                      class="form-control"
+                      placeholder="Nome do produto"
+                    />
+                  </div>
+                  <div class="col-md-3">
+                    <input
+                      type="number"
+                      id="quantidadeInput"
+                      class="form-control"
+                      placeholder="Quantidade"
+                      min="1"
+                      value="1"
+                    />
+                  </div>
+                  <div class="col-md-3">
+                    <select id="unidadeSelect" class="form-select">
+                      <option value="un">un</option>
+                      <option value="kg">kg</option>
+                      <option value="g">g</option>
+                    </select>
+                  </div>
+                </div>
+                <button
+                  onclick="adicionarItem()"
+                  class="btn btn-primary w-100 mt-3"
+                >
+                  <i class="bi bi-plus-circle me-2"></i>Adicionar Item
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button onclick="exportarLista()" class="btn btn-success">
+                <i class="bi bi-save"></i> Salvar Lista
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <footer class="bg-dark text-white py-3 mt-auto">
+      <div class="container text-center">
+        <p class="mb-0 small">&copy; Lista Ae! 2025</p>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="/src/js/app.js"></script>
   </body>
 </html>
