--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -16,7 +16,31 @@
     <link rel="stylesheet" href="../css/login.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
-    <header></header>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="../index.html">Lista Ae! 🛒</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Início</a>
+              </li>
+              <li id="out" class="nav-item">
+                <a class="nav-link active" href="">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
       <div class="container-fluid">
         <div class="row min-vh-100">
