--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Início</a>
+                <a class="nav-link active" href="index.html">Início</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="pages/login.html">Login</a>
+                <a class="nav-link" href="/src/pages/login.html">Login</a>
               </li>
             </ul>
           </div>
