--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/src/css/index.css" />
+    <link rel="stylesheet" href="src/css/index.css" />
   </head>
   <body>
     <header>
@@ -70,7 +70,7 @@
                   🛒 Menos estresse, mais economia e praticidade no seu dia a
                   dia.
                 </p>
-                <a href="pages/login.html" class="hero-btn">Comece agora</a>
+                <a href="src/pages/login.html" class="hero-btn">Comece agora</a>
               </div>
             </div>
 
