--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -38,9 +38,7 @@
                 <a class="nav-link active" href="/src/pages/app.html">Início</a>
               </li>
               <li id="out" class="nav-item">
-                <a class="nav-link" onclick="sair()" href="../index.html"
-                  >Sair</a
-                >
+                <a class="nav-link" onclick="sair()" href="/index.html">Sair</a>
               </li>
             </ul>
           </div>
