--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="../index.html">Lista Ae! 🛒</a>
+          <a class="navbar-brand" href="/index.html">Lista Ae! 🛒</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html">Início</a>
+                <a class="nav-link" href="/index.html">Início</a>
               </li>
               <li id="out" class="nav-item">
                 <a class="nav-link active" href="">Login</a>
