--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <a class="navbar-brand" href="index.html">Lista Ae! 🛒</a>
           <button
             class="navbar-toggler"
+            title="Menu"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
