feat: ajustando acessibilidade

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -27,6 +27,7 @@
           <button
             class="navbar-toggler"
             type="button"
+            title="Menu"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
           >
