--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -23,6 +23,7 @@
           <button
             class="navbar-toggler"
             type="button"
+            title="Menu"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
           >
@@ -103,7 +104,7 @@
                       href="#"
                       data-bs-toggle="modal"
                       data-bs-target="#cadastroModal"
-                      class="btn btn-primary border border-2 rounded-pill opacity-50"
+                      class="btn btn-secondary border border-2 rounded-pill"
                     >
                       Cadastre-se aqui!
                     </a>
