--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -48,7 +48,7 @@
           <div class="col-md-6 d-none d-xl-flex p-0">
             <div class="banner">
               <img
-                src="../images/_7c58ef64-c1d1-43d1-ac6b-075dd8df1394.jpg"
+                src="../images/_509a6ef5-fd8f-469c-89e6-fcda708f2027 (1).jpg"
                 alt="banner compras"
               />
             </div>
@@ -100,14 +100,14 @@
                 <div class="text-center mt-5">
                   <p class="mb-0">
                     Ainda não tem uma conta?
-                    <a
-                      href="#"
+                    <button
                       data-bs-toggle="modal"
                       data-bs-target="#cadastroModal"
-                      class="btn btn-secondary border border-2 rounded-pill"
+                      class="btn border border-2 rounded-pill"
+                      id="button-cadastro"
                     >
                       Cadastre-se aqui!
-                    </a>
+                    </button>
                   </p>
                 </div>
 
