--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -43,8 +43,8 @@
                   >Mercados</a
                 >
               </li>
-              <li id="out" class="nav-item">
-                <a class="nav-link" onclick="sair()" href="/index.html">Sair</a>
+              <li id="logout-btn" class="nav-item">
+                <a class="nav-link" href="#" onclick="return sair();">Sair</a>
               </li>
             </ul>
           </div>
@@ -157,9 +157,10 @@
                   </div>
                   <div class="col-md-3">
                     <select id="unidadeSelect" class="form-select">
-                      <option value="un">un</option>
-                      <option value="kg">kg</option>
+                      <option value="Un">Un</option>
+                      <option value="Kg">Kg</option>
                       <option value="g">g</option>
+                      <option value="L">L</option>
                     </select>
                   </div>
                 </div>
@@ -186,13 +187,8 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-white py-3 mt-auto">
-      <div class="container text-center">
-        <p class="mb-0 small">&copy; Lista Ae! 2025</p>
-      </div>
-    </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/src/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
