--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="/src/css/index.css" />
@@ -23,7 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Lista Ae! 🛒</a>
+          <a class="navbar-brand" href="">Lista Ae! 🛒</a>
           <button
             class="navbar-toggler"
             title="Menu"
@@ -35,10 +31,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Início</a>
-              </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="/src/pages/login.html">Login</a>
               </li>
