--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista Ae</title>
-    <link rel="preconnect" href="http://localhost:3000">
-    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="preconnect" href="http://localhost:3000" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -101,16 +101,26 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Editar Item</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
             </div>
             <div class="modal-body">
               <div class="mb-3">
                 <label class="form-label">Produto</label>
-                <input type="text" id="editProduto" class="form-control">
+                <input type="text" id="editProduto" class="form-control" />
               </div>
               <div class="mb-3">
                 <label class="form-label">Quantidade</label>
-                <input type="number" id="editQuantidade" class="form-control" step="0.01">
+                <input
+                  type="number"
+                  id="editQuantidade"
+                  class="form-control"
+                  step="0.01"
+                />
               </div>
               <div class="mb-3">
                 <label class="form-label">Unidade</label>
@@ -123,8 +133,16 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-              <button type="button" class="btn btn-primary" id="salvarEdicao">Salvar</button>
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Cancelar
+              </button>
+              <button type="button" class="btn btn-primary" id="salvarEdicao">
+                Salvar
+              </button>
             </div>
           </div>
         </div>
@@ -212,6 +230,9 @@
     </main>
     <script src="/src/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" async></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" async></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      async
+    ></script>
   </body>
 </html>
