--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -96,7 +96,7 @@
         </div>
       </div>
 
-      <!-- Modal de Edição -->
+      <!-- Modal de Edição antes de enviar -->
       <div class="modal fade" id="modalEdicao" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -144,6 +144,27 @@
               <button type="button" class="btn btn-primary" id="salvarEdicao">
                 Salvar
               </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal de Edição na lista no banco-->
+      <div class="modal fade" id="modalEdicaoSimples" tabindex="-1" aria-labelledby="modalEdicaoSimplesLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalEdicaoSimplesLabel">Editar Itens da Lista</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <ul class="list-group" id="listaEdicaoSimples">
+                <!-- Itens serão carregados aqui -->
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn btn-primary" onclick="salvarEdicaoSimples()">Salvar</button>
             </div>
           </div>
         </div>
